[package]
name = "smoke"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postcard = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
tokio-rustls = "0.23"
tokio = { version = "1", features = ["rt", "net", "macros", "io-util", "sync", "time"]}

[dev-dependencies]
tokio-test = "0.4.2"
env_logger = "0.9"
criterion = { version = "0.3", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "signal"
harness = false